# parameter-golf

./: README.md  attention-residuals.tex  co4.html  dreamer.html  eval_loops.py  griffin.html  latent-scaling.html  make_byte_dataset.py  noble.html  pyproject.toml  requirements.txt  strip_html.py  sweep.py  train_baseline.py  train_deq.py  train_gpt.py  train_gpt_mlx.py  train_griffin.py  train_hybrid.py  train_recursive.py  train_simple.py  wandb_utils.py
data/: tokenizer_specs.json
records/track_10min_16mb/2026-03-24_HybridGDN/: submission.json  train_hybrid.py
