[project]
name = "parameter-golf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlx>=0.31.1",
    "numpy>=2.4.3",
    "sentencepiece>=0.2.1",
    "torch>=2.10.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "ty>=0.0.24",
]
