[project]
name = "parameter-golf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.3",
    "huggingface-hub>=1.7.2",
    "numpy>=2.4.3",
    "python-dotenv>=1.1.1",
    "sentencepiece>=0.2.1",
    "torch>=2.10.0",
    "torchdeq>=0.1.0",
    "tqdm>=4.67.3",
    "wandb>=0.23.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "ty>=0.0.24",
]
mac = [
    "mlx>=0.31.1",
]
