[project]
name = "parameter-golf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.3",
    "flash-linear-attention>=0.4.2",
    "huggingface-hub>=1.7.2",
    "numpy>=2.4.3",
    "python-dotenv>=1.1.1",
    "sentencepiece>=0.2.1",
    "torch>=2.9.0",
    "torchdeq>=0.1.0",
    "tqdm>=4.67.3",
    "wandb>=0.23.0",
    "zstandard>=0.25.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "ty>=0.0.24",
]
mac = [
    "mlx>=0.31.1",
]

[tool.uv.sources]
torch = { index = "pytorch", marker = "sys_platform != 'darwin'" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

